--- a/khyeras/_dev/styles/khyeras_v1/template/partials/content_sitemap.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/content_sitemap.html
@@ -1,39 +1,34 @@
 <div class="sitemap">
-	{% if KHY_LINKS %}
-		{% for key, link in KHY_LINKS if !link.parent %}
+	{% if KHY_NAV_LINKS %}
+		{% for key, link in KHY_NAV_LINKS %}
 			<section id="sitemap-{{ key }}" class="sitemap-section">
-				<h3><a href="{{ ROOT_PATH }}{{ key }}">{{ link.label }}</a></h3>
-				<ul class="sitemap-menu" role="menu">
-					{% for map_key, map_link in KHY_LINKS if (key ~ '-') in map_key && map_link.parent %}
-						{% set is_sublink = (map_link.parent is iterable) ? false : true %}
-
-						{% if map_key == 'lore-races-half-breed' %}
-							{% set is_sublink = true %}
-						{% elseif map_key == 'lore-short-history' %}
-							{% set is_sublink = false %}
-						{% endif %}
-
-						{% set map_label = (map_key == 'lore-short-history') ? 'Short History' : map_link.label %}
-
-						{{ function.create_nav_li(ROOT_PATH ~ map_key, map_label, (is_sublink ? '' : 'sub-link')) }}
-					{% endfor %}
-					{% if key == 'about' %}
-						{% include 'partials/nav_menu_about.html' %}
+				<h3>
+					{% if key != 'members' %}
+						<a href="{{ ROOT_PATH }}{{ link.url }}">{{ link.name }}</a>
+					{% elseif not S_IS_BOT && (S_DISPLAY_MEMBERLIST || U_TEAM) %}
+						<a href="{{ U_MEMBERLIST }}">{{ lang('MEMBERLIST') }}</a>
 					{% endif %}
-				</ul>
+				</h3>
+				{% if link.children %}
+					<ul class="sitemap-menu" role="menu">
+						{% for key2, link2 in link.children %}
+							{{ function.create_nav_li(ROOT_PATH ~ link2.url, link2.name) }}
+							{% if link2.children %}
+								{% for key3, link3 in link2.children %}
+									{{ function.create_nav_li(ROOT_PATH ~ link3.url, link3.name, 'sub-link') }}
+								{% endfor %}
+							{% endif %}
+						{% endfor %}
+						{% if key == 'about' %}
+							{% include 'partials/nav_menu_about.html' %}
+						{% elseif key == 'members' && not S_IS_BOT && (S_DISPLAY_MEMBERLIST || U_TEAM) %}
+							{% include 'partials/nav_menu_quick_links.html' %}
+						{% endif %}
+					</ul>
+				{% endif %}
 			</section>
 		{% endfor %}
 	{% endif %}
-
-	{% if not S_IS_BOT && (S_DISPLAY_MEMBERLIST || U_TEAM) %}
-		<section id="sitemap-members" class="sitemap-section">
-			<h3><a href="{{ U_MEMBERLIST }}">{{ lang('MEMBERLIST') }}</a></h3>
-			<ul class="sitemap-menu" role="menu">
-				{% include 'partials/nav_menu_quick_links.html' %}
-			</ul>
-		</section>
-	{% endif %}
-
 	{% if S_DISPLAY_SEARCH %}
 		<section id="sitemap-search" class="sitemap-section">
 			<h3><a href="{{ U_SEARCH }}">{{ lang('SEARCH') }}</a></h3>
