--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -596,7 +596,7 @@
 		}
 	}
 	.sitemap {
-		.sitemap-section, #sitemap-lore {
+		.sitemap-section, #sitemap-lore, #sitemap-setting {
 			float: none;
 		}
 		.sitemap-section {
