--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -12,7 +12,7 @@
 							<h4>About</h4>
 							<p>Free from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveils vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. Khy'eras is an original high fantasy / medieval RPG with no word count and a focus on collaborative writing experiences. <a class="read-more" href="{{ ROOT_PATH }}about">Read more...</a></p>
 							<p class="footer-text">
-								&copy; 2019 Khy'eras RPG<br />
+								&copy; {{ 'now' | date('Y') }} Khy'eras RPG<br />
 								Content and layout design by Adria/Memoria<br />
 								<!-- EVENT overall_footer_copyright_prepend -->
 								{{ CREDIT_LINE }}<br />
