--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_layout.scss
@@ -231,46 +231,27 @@ body .tribute-container {
 
 #nav-breadcrumbs {
 	margin: 0 0 30px 0;
-	ul {
-		margin: 0 -2.5px;
-		li {
-			padding: 1.5px 2.5px;
-			&, & > a, & > i {
-				vertical-align: middle;
-			}
-			&, a {
-				display: inline-block;
-			}
-			a {
-				@include ellipsis;
-			}
+	.breadcrumbs {
+		margin: 0 -5px -5px -5px;
+		@include flex-flow(row wrap);
+		.crumb {
+			padding: 0 5px;
+			margin: 0 0 5px 0;
+			@include flex;
+			align-items: center;
+			max-width: 300px;
+			@include ellipsis;
+		}
+		.crumb-seperator {
 			.icon {
-				margin: 0 5px 0 0;
 				font-size: rem(13px);
-				@include position($type: relative, $top: -1.5px);
 			}
 			.icon-slash:before {
 				content: '\00002f';
 			}
 			.rpg-castle {
+				@include position($type: relative, $top: -2.5px);
 				font-size: rem(18px);
-				top: -2.5px;
-				margin: 0 12px 0 0;
-			}
-			&.wrapped-max a {
-				max-width: 120px;
-			}
-			&.wrapped-wide a {
-				max-width: 100px;
-			}
-			&.wrapped-medium a {
-				max-width: 80px;
-			}
-			&.wrapped-small a {
-				max-width: 60px;
-			}
-			&.wrapped-tiny a {
-				max-width: 40px;
 			}
 		}
 	}
@@ -365,8 +346,12 @@ body .tribute-container {
 	margin: 0 0 $main-margin 0;
 }
 
-.post, .topicreview, .forumbg, #qr_postform .panel, #agreement .panel, .topic_poll .panel {
+.post, .topicreview, .forumbg, #qr_postform .panel, #agreement .panel, .topic_poll .panel, .panel.no-content {
 	margin: 0 0 20px 0;
+}
+
+.panel.no-content .inner {
+	padding-bottom: 20px;
 }
 
 .panel .panel, .panel .post {
@@ -480,13 +465,6 @@ body .tribute-container {
 			display: none;
 		}
 	}
-}
-
-/* No Content
-============================================== */
-
-.panel .inner.no-content {
-	padding-bottom: 20px;
 }
 
 /* Action Bar & Display Actions
