--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_responsive.scss
@@ -603,6 +603,12 @@
 			width: auto;
 		}
 	}
+	.image-fit.image-fit-responsive {
+		background-position: center bottom;
+		img {
+			@include sr-only;
+		}
+	}
 
 	// viewlisting.scss
 	.topiclist {
@@ -692,13 +698,6 @@
 							@include sizing(auto, 120px);
 							border-radius: 0;
 							border: 0;
-							background-position: center bottom;
-							img {
-								display: none;
-							}
-							&[style*='ajteire'], &[style*='irtuen'] {
-								background-position: center center;
-							}
 						}
 						.forumtitle {
 							@include black-bar(50px, -10px, -10px);
@@ -966,17 +965,20 @@
 		.excerpt-image, &.excerpt-right .excerpt-image {
 			margin: 0 0 20px 0;
 		}
-		.excerpt-image .image-wrap {
-			height: 150px;
-			background-position: center top;
-			border-radius: 0;
-			border-width: 2px;
-			padding-bottom: 0;
-			&[style*='sorcerer'], &[style*='summoner'], &[style*='bard'] {
-				background-position: center -50px;
+		.excerpt-image {
+			.image-wrap {
+				height: 150px;
+				border-radius: 0;
+				border-width: 2px;
+				padding-bottom: 0;
 			}
-			img {
-				display: none;
+			.image-fit {
+				&[style*='/classes/'] {
+					background-position: center top;
+				}
+				&[style*='sorcerer'], &[style*='summoner'], &[style*='bard'] {
+					background-position: center -75px;
+				}
 			}
 		}
 		.excerpt-details {
@@ -1010,11 +1012,6 @@
 	}
 	.excerpt-simple .excerpt-details {
 		min-height: 90px;
-	}
-	.section-page-setting, .section-page-tviyr, .section-page-ninraih, .section-page-irtuen-reaches {
-		.excerpt .excerpt-image .image-wrap {
-			background-position: center bottom;
-		}
 	}
 	.card-grid {
 		display: block;
@@ -1587,7 +1584,7 @@
 			}
 		}
 	}
-	.excerpt .excerpt-image .image-wrap {
+	.excerpt .excerpt-image .image-fit {
 		&[style*='sorcerer'], &[style*='summoner'], &[style*='bard'] {
 			background-position: center top;
 		}
