--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_responsive.scss
@@ -609,6 +609,13 @@
 			@include sr-only;
 		}
 	}
+	.toggle-content-expanded-mobile {
+		@include toggle-content(show, $transition: true);
+	}
+	.toggle-content-collapsed-mobile {
+		@include toggle-content(hide);
+		@include sr-only;
+	}
 
 	// viewlisting.scss
 	.topiclist {
@@ -1259,14 +1266,6 @@
 	}
 	.page-welcome .toggle-buttons {
 		display: block;
-	}
-	.page-welcome .site-links, .featured-content {
-		@include position($type: absolute, $top: -9999px, $left: -9999px);
-		@include toggle-content(hide);
-		&.toggle-show {
-			position: static;
-			@include toggle-content(show, $transition: true);
-		}
 	}
 	.page-welcome .site-links, .page-welcome .toggle-buttons, .featured-content {
 		.flex-row {
