--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_header.scss
@@ -372,8 +372,7 @@ $transform: color 0.3s ease-in-out, transform 0.5s ease-in-out;
 	.toggle-buttons {
 		display: none;
 		.button {
-			display: block;
-			cursor: pointer;
+			width: 100%;
 		}
 	}
 }
