--- a/khyeras/styles/khyeras_v1/template/partials/header_welcome.html
+++ b/khyeras/styles/khyeras_v1/template/partials/header_welcome.html
@@ -38,16 +38,16 @@
 						</p>
 						<div class="toggle-buttons">
 							<div class="flex-row flex-row-10">
-								<div class="toggle toggle-links flex-column">
-									<a class="button">
+								<div class="toggle-links flex-column">
+									<button class="button toggle-button" data-toggle-type="welcome" data-toggle-id="9999" data-toggle-name="news" data-toggle-state="false" data-toggle-mobile="true">
 										<i class="icon rpg-icon rpg-hunting-horn" aria-hidden="true"></i><span>News</span>
-									</a>
+									</button>
 								</div>
 								{% if SCRIPT_NAME == 'index' %}
-									<div class="toggle toggle-featured flex-column">
-										<a class="button">
+									<div class="toggle-featured flex-column">
+										<button class="button toggle-button" data-toggle-type="welcome" data-toggle-id="9999" data-toggle-name="featured" data-toggle-state="false" data-toggle-mobile="true">
 											<i class="icon rpg-icon rpg-stars-stack" aria-hidden="true"></i><span>Featured</span>
-										</a>
+										</button>
 									</div>
 								{% endif %}
 							</div>
