Work on css pie chart

--- a/khyeras/_dev/styles/khyeras_v1/template/pages_custom.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/pages_custom.html
@@ -17,6 +17,10 @@
 		<div class="content pages-content">
 			{{ PAGE_CONTENT }}
 
+			{% if KHY_SCRIPT_NAME == 'members-character-census' %}
+				{% include 'partials/content_census.html' %}
+			{% endif %}
+
 			{% if KHY_SCRIPT_NAME == 'about-khyeras-faq' %}
 				{% include 'partials/content_faq.html' %}
 			{% endif %}
