--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_responsive.scss
@@ -31,6 +31,11 @@
 		}
 	}
 
+	// other-sections.scss
+	.pie-chart.flex-column {
+		width: 50%;
+	}
+
 	// cp.scss
 	.cp-menu {
 		flex: 0 0 150px;
@@ -615,7 +620,7 @@
 	.toggle-content-collapsed-mobile {
 		@include toggle-content(hide);
 		@include sr-only;
-	}	
+	}
 
 	// viewlisting.scss
 	.topiclist {
