--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_responsive.scss
@@ -1869,6 +1869,21 @@
 			margin-bottom: $ffs;
 		}
 	}
+	.pie-chart {
+		display: block;
+		.pie-chart-circle, .pie-chart-title {
+			margin: 0 0 10px 0;
+		}
+		.pie-chart-circle {
+			width: auto;
+		}
+		.pie-chart-key {
+			margin: 0;
+			ul li {
+				@include inline-block(top);
+			}
+		}
+	}
 	.key.key-grid li {
 		width: auto;
 		float: none;
